<resources>
    <string name="app_name">RideOrNot</string>
    <string name="app_name_kr">탈래말래</string>

    <!-- Common -->
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="favorite">즐겨찾기</string>
    <string name="setting">설정</string>
    <string name="station_detail">역 상세정보</string>
    <string name="location">위치</string>
    <string name="notification">알림</string>
    <string name="station">%s역</string>
    <string name="direction">%s 방면</string>
    <string name="current_time">%s 기준</string>
    <string name="toast_not_yet_implemented">아직 추가되지 않은 기능입니다.\n업데이트를 기다려 주세요!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 탈래말래 승차 알림 -->
    <string name="ride_or_not_notification_channel_name">승차 알림</string>
    <string name="ride_or_not_notification_channel_description">승차 알림을 표시합니다.</string>

    <!-- 탈래말래 탑승 여부 알림 -->
    <string name="ride_or_not_notification_boarding_status_title">승차하셨습니까?</string>
    <string name="ride_or_not_notification_boarding_status_content">열차에 승차하셨는지 서비스 개선을 위해 알려주세요</string>

    <!-- Permission Info -->
    <string name="permission_info">앱 접근 권한 안내</string>
    <string name="permission_info_caption">탈래말래 서비스 이용을 위해\n아래의 권한이 필요합니다.</string>
    <string name="permission_info_essential">필수 접근 권한</string>
    <string name="permission_info_essential_content_detail_location">내 위치에서 가까운 지하철 역 찾기</string>
    <string name="permission_info_essential_content_detail_notification">포그라운드 서비스, 지하철 승차 알림</string>
    <string name="permission_info_notice"><ul><li>접근 권한을 거부할 경우 해당 기능이 정상적으로 작동하지 않습니다.</li>\n<li>설정 > 탈래말래 > 권한 에서 권한 변경이 가능합니다.</li></ul></string>

    <!-- Home -->
    <string name="info_notification">정보 알림</string>
    <string name="info_notification_caption">지하철 지연, 사고 정보를 확인하세요</string>
    <string name="nearby_notification">주변 알림</string>
    <string name="last_station">최근 역</string>
    <string name="more_info">더보기</string>
    <string name="congestion">혼잡도</string>
    <string name="percentage">(%)</string>
    <string name="edit">편집</string>
    <string name="refresh">새로고침</string>

    <!-- Station Detail -->
    <string name="arrival_info">도착 정보</string>
    <string name="station_congestion">역사 혼잡도</string>
    <string name="not_exist_arrival_info_message">도착 정보가 없습니다.</string>

    <!-- Setting -->
    <string name="account_setting">계정 설정</string>
    <string name="account_info">계정 정보</string>
    <string name="walking_speed_setting">걸음 속도 설정</string>
    <string name="notification_setting">알림 설정</string>
    <string name="push_notification_reception">Push 알림 수신</string>
    <string name="etc_setting">기타</string>
    <string name="logout">계정 변경</string>
    <string name="unregister">회원탈퇴</string>
    <string name="logout_message">로그아웃 하시겠습니까?</string>
    <string name="logout_caption">기기에 두 개 이상의 구글 계정이 등록되어 있을 경우, 계정을 변경할 수 있습니다.</string>
    <string name="unregister_message">회원탈퇴하시겠습니까?</string>
    <string name="unregister_caption">탈퇴 시 모든 정보가 삭제됩니다.</string>
    <string name="unregister_confirmation_message">정말로 회원탈퇴하시겠습니까?</string>
    <string name="unregister_confirmation_caption">탈퇴 후 기존의 계정 정보는\n다시 복구할 수 없게 됩니다.</string>
    <string name="unregister_confirmation_top_btn_title">네, 탈퇴할게요.</string>
    <string name="toast_login_success">성공적으로 로그인하였습니다.</string>
    <string name="toast_login_failure">로그인에 실패하였습니다.</string>
    <string name="toast_logout_success">성공적으로 로그아웃하였습니다.</string>
    <string name="toast_account_not_exists">계정 정보 확인에 실패했습니다.</string>
    <string name="toast_unregister_success">회원 탈퇴가 완료되었습니다. 이전에 수집된 모든 개인정보는 삭제됩니다.</string>
    <string name="toast_notification_on">푸시 알림이 설정되었습니다.</string>
    <string name="toast_notification_off">푸시 알림이 해제되었습니다.</string>


    <!-- Profile Dialog -->
    <string name="profile_account_info">내 계정 정보</string>
    <string name="profile_email">이메일</string>
    <string name="profile_nickname">닉네임</string>
    <string name="profile_gender">성 별</string>
    <string name="profile_age_range">연령대</string>
    <string name="profile_reset">프로필 재설정하기</string>


    <!-- Dialog -->
    <string name="check">확인</string>
    <string name="cancel">취소</string>
    <string name="action_fail">처리에 실패하였습니다. 다시 시도해 주세요.</string>

    <!-- Search -->
    <string name="recent_searched">최근 검색</string>
    <string name="search_edit">수정</string>

    <!-- Favorite -->
    <string name="favorite_text">즐겨찾기</string>
    <string name="favorite_edit_start">편집하기</string>
    <string name="favorite_edit_apply">적용하기</string>

    <!-- SignUp -->
    <string name="signUp_age">연령대</string>
    <string name="signUp_gender">성별</string>
    <string name="signUp_nickname">닉네임</string>
    <string name="toast_signUp_success">프로필 설정이 완료되었습니다.</string>
</resources>