<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/selector_bnv_home"
        android:title="@string/home"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/selector_bnv_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/selector_bnv_favorite"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/selector_bnv_setting"
        android:title="@string/setting"
        app:showAsAction="always" />

</menu>