<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_profile_account_info"
        style="@style/Text.Header2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="24dp"
        android:text="@string/permission_info"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_profile_email"
        style="@style/Text.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="2dp"
        android:paddingHorizontal="24dp"
        android:text="@string/permission_info_caption"
        android:textAlignment="center"
        android:textColor="@color/gray_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_account_info" />

    <View
        android:id="@+id/v_first"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_permission_info_essential_title"
        style="@style/Text.Title3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="24dp"
        android:text="@string/permission_info_essential"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_first" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_permission_info_essential_content_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_info_essential_title">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_permission_info_essential_content_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_in_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/iv_permission_info_essential_content_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_permission_info_essential_content_location"
            app:layout_constraintTop_toTopOf="@+id/iv_permission_info_essential_content_location">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_permission_info_essential_content_location"
                style="@style/Text.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semi_bold"
                android:text="@string/location" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_permission_info_essential_content_detail_location"
                style="@style/Text.Body4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/permission_info_essential_content_detail_location"
                android:textColor="@color/gray_700" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_permission_info_essential_content_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_permission_info_essential_content_location">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_permission_info_essential_content_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification_in_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/iv_permission_info_essential_content_notification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_permission_info_essential_content_notification"
            app:layout_constraintTop_toTopOf="@+id/iv_permission_info_essential_content_notification">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_permission_info_essential_content_notification"
                style="@style/Text.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semi_bold"
                android:text="@string/notification" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_permission_info_essential_content_detail_notification"
                style="@style/Text.Body4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/permission_info_essential_content_detail_notification"
                android:textColor="@color/gray_700" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/v_second"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_permission_info_essential_content_notification" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_permission_info_notice"
        style="@style/Text.Body6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="4dp"
        android:paddingHorizontal="24dp"
        android:text="@string/permission_info_notice"
        android:textColor="@color/gray_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_second" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check"
        style="@style/Text.Title3"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/dialog_base_btn"
        android:backgroundTint="@color/blue"
        android:elevation="0dp"
        android:text="@string/check"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_permission_info_notice" />

</androidx.constraintlayout.widget.ConstraintLayout>